update further, more texts to read

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <div class="panel" id="topPanel"></div>
+    <div class="panel just-another-hand-regular" id="topPanel"></div>
     <div class="panel" id="rightPanel"></div>
 
     <div id="container">
@@ -36,8 +36,8 @@
     </div>
 
     <div class="button-container">
-        <button class="btn inner-shadow kameron-font" style="color: #C03434;">Who are you?</button>
-        <button class="btn inner-shadow kameron-font">I want you to connect <b>Right Now!</b></button>
+        <button id="who_are_you" class="btn inner-shadow kameron-font" style="color: #C03434;">Who are you?</button>
+        <button id="connect_bt" class="btn inner-shadow kameron-font">I want you to connect <b>Right Now!</b></button>
         <button id="surprise1" class="btn drop-shadow kameron-font">Surpise!</button>
         <button id="surprise2" class="btn drop-shadow kameron-font">Surpise!</button>
     </div>
@@ -45,6 +45,7 @@
     <script src="script.js"></script>
     <script src="chatBox.js"></script>
     <script src="floating_bg.js"></script>
+    <script src="script2.js"></script>
 </body>
 
 </html>
